[project]
name = "tier-1"
version = "0.1.0"
description = ""
authors = [
    {name = "bala-wk71",email = "balawk71@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchdata (>=0.11.0,<0.12.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "datasets (>=3.4.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "tier_1", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
